# tmuxgen

./: README.md  pyproject.toml
examples/: daily_tmux.sh  daily_tmux.toml
tmuxgen/: __init__.py  cli.py  loader.py  models.py  utils.py
tmuxgen/renderers/: __init__.py  bash.py
